--- a/plino/web/src/App.css
+++ b/plino/web/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,9 +56,11 @@ a:hover {
   width: 250px;
 }
 
+/*
 .linear {
   background-image: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
 }
+*/
 .white {
   color: white;
   text-align: center;
@@ -130,3 +132,68 @@ input[type="file"] {
 .black {
   color: black;
 }
+
+.linear {
+    background-color: #111214;
+    background-image: url("images/bg.png");
+    background-size: cover;
+    background-position: center -263px;
+}
+
+ .navbar.transparent.navbar-inverse .navbar-inner {
+    border-width: 0px;
+    -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    background-color: rgba(0,0,0,0.0);
+    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
+    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+}
+
+.gray {
+    background-color: #111214;
+}
+@keyframes moveup {
+    0% {transform: translate(0px, 0px);}
+    50% {transform: translate(15px, -25px);}
+    100% {transform: translate(0px, 0px);}
+  }
+  @keyframes moveup2 {
+    0% {transform: translate(20px, -30px);}
+    50% {transform: translate(55px, -65px);}
+    100% {transform: translate(20px, -30px);}
+  }
+  @keyframes moveup3 {
+    0% {transform: translate(60px, -70px);}
+    50% {transform: translate(90px, -100px);}
+    100% {transform: translate(60px, -70px);}
+  }
+  
+  
+  .img1 {
+    animation-name: moveup;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+  } 
+  .img2 {
+    animation-name: moveup2;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+  }
+  .img3 {
+    animation-name: moveup3;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+  }
