--- a/plino/web/src/App.css
+++ b/plino/web/src/App.css
@@ -23,6 +23,11 @@
   color: white;
 }
 
+.App-header .nav-item a {
+  color: white;
+  font-weight: 600;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -133,67 +138,104 @@ input[type="file"] {
   color: black;
 }
 
-.linear {
-    background-color: #111214;
-    background-image: url("images/bg.png");
-    background-size: cover;
-    background-position: center -263px;
+.fixed-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #111214;
+  background-image: url("images/bg.png");
+  background-size: auto;
+  background-position: center -263px;
+  z-index: -1;
 }
 
- .navbar.transparent.navbar-inverse .navbar-inner {
-    border-width: 0px;
-    -webkit-box-shadow: 0px 0px;
-    box-shadow: 0px 0px;
-    background-color: rgba(0,0,0,0.0);
-    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
-    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+.navbar.transparent.navbar-inverse .navbar-inner {
+  border-width: 0px;
+  -webkit-box-shadow: 0px 0px;
+  box-shadow: 0px 0px;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: -webkit-gradient(
+    linear,
+    50% 0%,
+    50% 100%,
+    color-stop(0%, rgba(0, 0, 0, 0)),
+    color-stop(100%, rgba(0, 0, 0, 0))
+  );
+  background-image: -webkit-linear-gradient(
+    270deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .gray {
-    background-color: #111214;
+  background-color: #111214;
 }
 @keyframes moveup {
-    0% {transform: translate(0px, 0px);}
-    50% {transform: translate(15px, -25px);}
-    100% {transform: translate(0px, 0px);}
+  0% {
+    transform: translate(0px, 0px);
   }
-  @keyframes moveup2 {
-    0% {transform: translate(20px, -30px);}
-    50% {transform: translate(55px, -65px);}
-    100% {transform: translate(20px, -30px);}
+  50% {
+    transform: translate(15px, -25px);
   }
-  @keyframes moveup3 {
-    0% {transform: translate(60px, -70px);}
-    50% {transform: translate(90px, -100px);}
-    100% {transform: translate(60px, -70px);}
+  100% {
+    transform: translate(0px, 0px);
   }
-  
-  
-  .img1 {
-    animation-name: moveup;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 10%;
-  } 
-  .img2 {
-    animation-name: moveup2;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 10%;
+}
+@keyframes moveup2 {
+  0% {
+    transform: translate(20px, -30px);
   }
-  .img3 {
-    animation-name: moveup3;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 10%;
+  50% {
+    transform: translate(55px, -65px);
   }
+  100% {
+    transform: translate(20px, -30px);
+  }
+}
+@keyframes moveup3 {
+  0% {
+    transform: translate(60px, -70px);
+  }
+  50% {
+    transform: translate(90px, -100px);
+  }
+  100% {
+    transform: translate(60px, -70px);
+  }
+}
+
+.img1 {
+  animation-name: moveup;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+.img2 {
+  animation-name: moveup2;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+.img3 {
+  animation-name: moveup3;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
